[tool.poetry]
name = "repl_python3_RicklangAPI"
version = "0.1.0"
description = ""
authors = ["FusionSid <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
keywords = "^0.0.1"
playsound = "^1.3.0"
pyttsx3 = "^2.90"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
